# thoughtgate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_REVIEW.md  Cargo.toml  Dockerfile  Dockerfile.test  Justfile  README.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  dist-workspace.toml  release.toml
.cursor/rules/: base.mdc
.devcontainer/: post-create.sh
.github/workflows/: ci.yml  docs.yml  fuzz.yml  prepare-release.yml  release.yml  scorecard.yml  tag-release.yml
benches/: jsonrpc_parse.rs  policy_eval.rs  ttfb.rs
deploy/grafana/: thoughtgate-overview.json  thoughtgate-policies.json
dev/bench/: data.js
docs/: CACHING_GUIDE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_amber_path.rs  fuzz_cedar_policy.rs  fuzz_config.rs  fuzz_full_request.rs  fuzz_green_path.rs  fuzz_header_redaction.rs  fuzz_http_request.rs  fuzz_inspector_chain.rs  fuzz_jsonrpc.rs  fuzz_ndjson.rs  fuzz_task_lifecycle.rs  fuzz_uri_parsing.rs
k8s/: governance-config.yaml  test-job.yaml
pr-preview/37/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/38/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/40/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/41/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/44/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/49/: 404.html  docs.html  index.html  sitemap.xml
pr-preview/55/: 404.html  CNAME  docs.html  index.html  sitemap.xml
pr-preview/56/: 404.html  docs.html  index.html  sitemap.xml
scripts/: collect_metrics.sh  measure_constrained.sh  measure_overhead.sh
specs/: REQ-CFG-001_Configuration.md  REQ-CORE-001_Zero_Copy_Streaming.md  REQ-CORE-003_MCP_Transport_and_Routing.md  REQ-CORE-004_Error_Handling.md  REQ-CORE-005_Operational_Lifecycle.md  REQ-CORE-006_Inspector_Framework.md  REQ-CORE-007_SEP1686_Protocol_Compliance.md  REQ-CORE-008_Stdio_Transport.md  REQ-GOV-001_Task_Lifecycle.md  REQ-GOV-002_Approval_Execution_Pipeline.md  REQ-GOV-003_Approval_Integration.md  REQ-GOV-004_Upstream_Task_Orchestration.md  REQ-OBS-001_Performance_Metrics.md  REQ-OBS-002_Telemetry_Tracing_Metrics.md  REQ-POL-001_Cedar_Policy_Engine.md  architecture.md
src/: admin.rs  buffered_forwarder.rs  config.rs  error.rs  lib.rs  logging_layer.rs  main.rs  metrics.rs  ports.rs  proxy_config.rs  proxy_service.rs  timeout.rs  traffic.rs
src/config/: defaults.rs  duration_format.rs  error.rs  loader.rs  mod.rs  schema.rs
src/error/: jsonrpc.rs  mod.rs
src/governance/: engine.rs  handlers.rs  mod.rs  pipeline.rs  task.rs
src/lifecycle/: health.rs  mod.rs
src/policy/: defaults.cedar  engine.rs  loader.rs  mod.rs  principal.rs  schema.cedarschema  types.rs
src/protocol/: capability.rs  methods.rs  mod.rs  task.rs
src/snapshots/: thoughtgate__proxy_service__tests__integrity_snapshot-2.snap  thoughtgate__proxy_service__tests__integrity_snapshot.snap
src/transport/: jsonrpc.rs  mod.rs  (+3 more)
tests/: amber_edge_cases.rs  amber_path_panic_safety.rs  benchmark-fast.js  benchmark.js  e2e_approval_flow.rs  edge_cases.rs  governance.js  governance_integration.rs  integration_k8s.rs  integration_streaming.rs  memory_profile.rs  test_fuzzer_crash_fix.rs  unit_peeking.rs
thoughtgate/: Cargo.toml
thoughtgate-core/: Cargo.toml
thoughtgate-core/benches/: jsonrpc_parse.rs  policy_eval.rs
thoughtgate-core/src/: inspector.rs  jsonrpc.rs  lib.rs  metrics.rs  profile.rs
thoughtgate-core/src/config/: defaults.rs  duration_format.rs  error.rs  loader.rs  mod.rs  schema.rs
thoughtgate-core/src/error/: mod.rs
thoughtgate-core/src/governance/: api.rs  engine.rs  evaluator.rs  handlers.rs  list_filtering.rs  mod.rs  pipeline.rs  service.rs  task.rs
thoughtgate-core/src/governance/approval/: mock.rs  mod.rs  redact.rs  scheduler.rs  slack.rs
thoughtgate-core/src/governance/task/: error.rs  helpers.rs  mod.rs  status.rs  store.rs  types.rs
thoughtgate-core/src/lifecycle/: mod.rs
thoughtgate-core/src/policy/: defaults.cedar  engine.rs  loader.rs  mod.rs  principal.rs  schema.cedarschema  types.rs
thoughtgate-core/src/protocol/: capability.rs  methods.rs  task.rs
thoughtgate-core/src/telemetry/: cardinality.rs  mod.rs  prom_metrics.rs  propagation.rs  spans.rs  timers.rs  trace_context.rs
thoughtgate-core/src/transport/: jsonrpc.rs  mod.rs  upstream.rs
thoughtgate-proxy/: Cargo.toml  dist.toml
thoughtgate-proxy/benches/: ttfb.rs
thoughtgate-proxy/src/: admin.rs  buffered_forwarder.rs  error.rs  lib.rs  logging_layer.rs  main.rs  mcp_handler.rs  ports.rs  proxy_body.rs  proxy_config.rs  proxy_service.rs  rate_limiter.rs  timeout.rs  traffic.rs
thoughtgate-proxy/src/mcp_handler/: capabilities.rs  cedar_eval.rs  factory.rs  gate_routing.rs  handler_config.rs  helpers.rs  mod.rs  request.rs  task_methods.rs
thoughtgate-proxy/src/snapshots/: thoughtgate_proxy__proxy_service__tests__integrity_snapshot-2.snap  thoughtgate_proxy__proxy_service__tests__integrity_snapshot.snap
thoughtgate-proxy/tests/: amber_edge_cases.rs  amber_path_panic_safety.rs  benchmark-fast.js  benchmark.js  dashboard_validation.rs  e2e_approval_flow.rs  edge_cases.rs  governance-k6.js  governance.js  governance_integration.rs  governance_smoke.rs  integration_k8s.rs  metrics_smoke.rs  test_fuzzer_crash_fix.rs  trace_context_propagation.rs
thoughtgate-proxy/tests/helpers/: fixtures.rs  mock_upstream.rs  mod.rs  test_client.rs
thoughtgate/src/: cli.rs  error.rs  lib.rs  main.rs
thoughtgate/src/shim/: lifecycle.rs  mod.rs  ndjson.rs  proxy.rs
thoughtgate/src/shim/proxy/: agent_to_server.rs  heartbeat.rs  helpers.rs  mod.rs  server_to_agent.rs  shutdown.rs
thoughtgate/src/wrap/: agent_launch.rs  config_adapter.rs  config_guard.rs  mod.rs
thoughtgate/src/wrap/config_adapter/: adapters.rs  env.rs  helpers.rs  mod.rs
thoughtgate/tests/: cli_args.rs  integration.rs  proptest_ndjson.rs  shim_proxy.rs
thoughtgate/tests/fixtures/: claude_code_config.json  claude_desktop_config.json  cursor_mcp_config.json  vscode_mcp_config.json  windsurf_mcp_config.json  zed_settings.json
website/: docusaurus.config.ts  sidebars.ts
(+341 files in other folders)
