[workspace]
members = ["thoughtgate-core", "thoughtgate-proxy", "thoughtgate"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
authors = ["Oleg Mukhin <oleg.v.mukhin@gmail.com>"]
license = "Apache-2.0"
homepage = "https://thoughtgate.dev"
repository = "https://github.com/thoughtgate/thoughtgate"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0.18"
bytes = "1.11.1"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
async-trait = "0.1"
arc-swap = "1.8.0"
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
